--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -1,12 +1,14 @@
 <h1>Index</h1>
-<hr> 
-<?php 
+<hr>
+<div class="row">
+	<?php foreach ($this->view->dados as $key => $produto) { ?>
 
-	foreach ($this->view->dados as $key => $produto) {
-		echo $produto['id']. ' - ' .
-		$produto['descricao'] . ' - ' .
-		$produto['preco']. '<br/>';
-	}
-
-?>
-
+		<div class="col-12 ">
+			<h3>
+				<?= $produto['id'] ?> →
+				<?= $produto['descricao'] ?> →
+				R$ <?= $produto['preco'] ?>
+			</h3>			
+		</div>
+	<?php } ?>
+</div>
